// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loading component renders when active 1`] = `
<transition-stub
  appear="false"
  css="true"
  name="fade"
  persisted="true"
>
  <div
    aria-busy="true"
    aria-label="Loading"
    class="vl-overlay vl-active vl-full-page"
    tabindex="0"
  >
    <div
      class="vl-background"
    />
    <div
      class="vl-icon"
    >
      
      
      
      <svg
        height="64"
        stroke="#000"
        viewBox="0 0 38 38"
        width="64"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <g
            stroke-width="2"
            transform="translate(1 1)"
          >
            <circle
              cx="18"
              cy="18"
              r="18"
              stroke-opacity=".25"
            />
            <path
              d="M36 18c0-9.94-8.06-18-18-18"
            >
              <animatetransform
                attributeName="transform"
                dur="0.8s"
                from="0 18 18"
                repeatCount="indefinite"
                to="360 18 18"
                type="rotate"
              />
            </path>
          </g>
        </g>
      </svg>
      
      
      
    </div>
  </div>
</transition-stub>
`;

exports[`Loading component renders when not active 1`] = `
<transition-stub
  appear="false"
  css="true"
  name="fade"
  persisted="true"
>
  <div
    aria-busy="false"
    aria-label="Loading"
    class="vl-overlay vl-active vl-full-page"
    style="display: none;"
    tabindex="0"
  >
    <div
      class="vl-background"
    />
    <div
      class="vl-icon"
    >
      
      
      
      <svg
        height="64"
        stroke="#000"
        viewBox="0 0 38 38"
        width="64"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <g
            stroke-width="2"
            transform="translate(1 1)"
          >
            <circle
              cx="18"
              cy="18"
              r="18"
              stroke-opacity=".25"
            />
            <path
              d="M36 18c0-9.94-8.06-18-18-18"
            >
              <animatetransform
                attributeName="transform"
                dur="0.8s"
                from="0 18 18"
                repeatCount="indefinite"
                to="360 18 18"
                type="rotate"
              />
            </path>
          </g>
        </g>
      </svg>
      
      
      
    </div>
  </div>
</transition-stub>
`;
